# ferretin

./: Cargo.toml  README.md  file
.github/workflows/: ci.yaml
ferretin/: Cargo.toml
ferretin-common/: Cargo.toml  README.md
ferretin-common/examples/: docsrs_client.rs
ferretin-common/src/: intra_doc_links.rs
ferretin/src/: color_scheme.rs  commands.rs  format_context.rs  main.rs  markdown.rs  styled_string.rs  tests.rs  verbosity.rs
ferretin/src/format/: documentation.rs  enum.rs  functions.rs  impls.rs  items.rs  mod.rs  module.rs  source.rs  struct.rs  trait.rs  types.rs
ferretin/src/renderer/: interactive.rs  mod.rs  plain.rs  test_mode.rs  tty.rs
ferretin/src/renderer/interactive/: mod.rs  render.rs  state.rs  theme.rs  ui.rs
ferretin/src/snapshots/: ferretin__tests__get_crate_root_test_mode.snap  ferretin__tests__get_struct_with_source.snap  ferretin__tests__list_crates.snap  ferretin__tests__recursive_module_listing.snap
ferritin/: CHANGELOG.md  Cargo.toml  build.rs
ferritin-common/: CHANGELOG.md  Cargo.toml  README.md
ferritin-common/examples/: docsrs_client.rs
ferritin-common/src/: crate_name.rs  doc_ref.rs  iterators.rs  lib.rs  navigator.rs  project.rs  rustdoc_data.rs  search.rs  sources.rs  string_utils.rs  tests.rs
ferritin/src/: color_scheme.rs  generate_docsrs_url.rs  logging.rs  main.rs  markdown.rs  request.rs  styled_string.rs  tests.rs
rustdoc-core/src/: intra_doc_links.rs  lib.rs  project.rs
rustdoc-mcp/: CHANGELOG.md  Cargo.toml
rustdoc-mcp/src/: request.rs  state.rs  tests.rs  workspace_tests.rs
(+162 files in other folders)
