[package]
name = "ferretin"
version.workspace = true
edition.workspace = true
description = "Human-friendly CLI for browsing Rust documentation"
readme.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "ferretin"
path = "src/main.rs"

[dependencies]
rustdoc-core = { path = "../rustdoc-core" }

anyhow.workspace = true
clap = { version = "4.5.54", features = ["derive", "cargo"] }
fieldwork = "0.4.6"
log = "0.4.29"
env_logger = "0.11.8"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
pulldown-cmark = "0.12"
regex = "1.11"
rustdoc-types.workspace = true
syntect = "5.2"
terminal_size = "0.4"
unicode-width = "0.2.0"
